# wire

./: .travis.yml  README.md  license
.github/workflows/: main.yml
armadillo_matrix/: CMakeLists.txt  package.xml
armadillo_matrix/include/armadillo_bits/: config.hpp.cmake
armadillo_matrix/src/: wrap_libs.cpp
problib/: CMakeLists.txt  package.xml
problib/include/problib/: conversions.h  datatypes.h  globals.h
problib/include/problib/pdfs/: Gaussian.h  Hybrid.h  Mixture.h  PDF.h  PMF.h  Uniform.h
problib/msg/: DimensionDescription.msg  PDFImpl.msg
problib/src/: conversions.cpp  test.cpp
problib/src/pdfs/: Gaussian.cpp  Hybrid.cpp  Mixture.cpp  PDF.cpp  PMF.cpp  Uniform.cpp
problib/test/: problib_test_full
problib_msgs/: CMakeLists.txt  package.xml
problib_msgs/msg/: PDF.msg
wire/: CMakeLists.txt  README.md  package.xml
wire_core/: CMakeLists.txt  package.xml
wire_core/database/: world_model.xml
wire_core/include/wire/: WorldModelROS.h
wire_core/include/wire/core/: ClassModel.h  Evidence.h  EvidenceSet.h  IStateEstimator.h  Property.h  PropertySet.h  datatypes.h
wire_core/include/wire/logic/: Assignment.h  AssignmentMatrix.h  AssignmentSet.h  HypothesesTree.h  Hypothesis.h
wire_core/include/wire/models/: FixedState.h
wire_core/include/wire/state_estimators/: MultiModelFilter.h
wire_core/include/wire/storage/: KnowledgeDatabase.h  ObjectStorage.h  SemanticObject.h
wire_core/include/wire/util/: ObjectModelParser.h
wire_core/launch/: start.launch
wire_core/models/: world_object_models.xml  world_object_models_TW.xml
wire_core/parameters/: world_model.yaml
wire_core/src/: WorldModelROS.cpp  dummy_evidence_publisher.cpp  world_model.cpp
wire_core/src/core/: ClassModel.cpp  Evidence.cpp  EvidenceSet.cpp  Property.cpp  PropertySet.cpp  datatypes.cpp
wire_core/src/logic/: Assignment.cpp  AssignmentMatrix.cpp  AssignmentSet.cpp  HypothesesTree.cpp  Hypothesis.cpp
wire_core/src/models/: FixedState.cpp
wire_core/src/state_estimators/: DiscreteFilter.cpp  FixedState.cpp  KalmanFilter.cpp  MultiModelFilter.cpp  PositionFilter.cpp
wire_core/src/storage/: KnowledgeDatabase.cpp  ObjectStorage.cpp  SemanticObject.cpp
wire_core/src/util/: ObjectModelParser.cpp
wire_core/test/: test_parser.cpp  test_plugin.cpp  test_plugin.h  test_plugins.xml  test_world_object_models.xml
wire_msgs/: CMakeLists.txt  package.xml
wire_msgs/msg/: ObjectEvidence.msg  ObjectState.msg  Property.msg  WorldEvidence.msg  WorldState.msg
wire_state_estimators/: CMakeLists.txt  models_plugin.xml  package.xml
wire_state_estimators/include/: DiscreteFilter.h  FixedState.h  KalmanFilter.h  PositionFilter.h  PositionFilterTW.h  PositionFilterTW_Gaus.h  PositionFilterTW_Unif.h
wire_state_estimators/src/: DiscreteFilter.cpp  FixedState.cpp  KalmanFilter.cpp  MultiModelFilter.cpp  PositionFilter.cpp  PositionFilterTW.cpp  PositionFilterTW_Gaus.cpp  PositionFilterTW_Unif.cpp
wire_tutorials/: CMakeLists.txt  package.xml
wire_tutorials/config/: rviz_world_model_electric.vcg  rviz_world_model_fuerte.vcg  rviz_world_model_fuerte_full_screen.vcg  rviz_world_model_kinetic.rviz
wire_tutorials/launch/: rviz_wire_electric.launch  rviz_wire_fuerte.launch  rviz_wire_kinetic.launch
wire_tutorials/src/: generate_evidence.cpp  get_world_state.cpp
wire_viz/: CMakeLists.txt  package.xml
wire_viz/include/: Visualizer.h  default_values.h
wire_viz/launch/: start.launch
wire_viz/parameters/: detections.yaml
wire_viz/src/: Visualizer.cpp  visualization.cpp
