<package>
  <name>armadillo_matrix</name>
  <version>0.0.1</version>
  <description>
     A ROS wrapper for Armadillo, a linear algebra library.
  </description>
  <maintainer email="j.elfring@tue.nl">Conrad Sanderson - NICTA (www.nicta.com.au), (Wrapper by Sjoerd van den Dries, Jos Elfring)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/armadillo_matrix</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
    
  </export>


</package>


