<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wire</name>
  <version>0.0.1</version>
  <description>The wire meta package is implements a framework that
     generates and maintains one consistent world state estimate based
     on object detections. It solves the data association problem by
     maintaining multiple hypotheses and facilitates tracking of various
     object attributes. The state estimators used for estimation and the
     probabilistic models used for association can be configured.
  </description>

  <maintainer email="j.elfring@tue.nl">Jos Elfring</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Wrapper around matrix library -->
  <exec_depend>armadillo_matrix</exec_depend>

  <!-- Library for probabilistic data and computations -->
  <exec_depend>problib</exec_depend>

  <!-- Wire core -->
  <exec_depend>wire_core</exec_depend>

  <!-- World messages for interacting with the world model -->
  <exec_depend>wire_msgs</exec_depend>

  <!-- Wire state estimators -->
  <exec_depend>wire_state_estimators</exec_depend>

  <!-- Wire visualization -->
  <exec_depend>wire_viz</exec_depend>

  <!-- Wire tutorials -->
  <exec_depend>wire_tutorials</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
