<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wire_core</name>
  <version>0.0.1</version>
  <description>
     wire_core
  </description>
  <maintainer email="j.elfring@tue.nl">Jos Elfring</maintainer>
  <author>Sjoerd van den Dries, Jos Elfring</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend><!-- for tinyxml2 -->

  <depend>pluginlib</depend>
  <depend>problib</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tinyxml2</depend>
  <depend>wire_msgs</depend>

<export>
    <wire_core plugin_test="${prefix}/test/test_plugins.xml" />
  </export>

</package>

