<package>
  <name>wire_msgs</name>
  <version>0.0.1</version>
  <description>
     wire_msgs
  </description>
  <maintainer email="jos.elfring@tno.nl">Sjoerd van den Dries, Jos Elfring</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wire_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>problib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>problib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>


