<package>
  <name>wire_state_estimators</name>
  <version>0.0.1</version>
  <description>
     wire_state_estimators
  </description>
  <maintainer email="jos.elfring@tno.nl">Sjoerd van den Dries, Jos Elfring</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wire_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>wire_core</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>wire_core</run_depend>
  <run_depend>pluginlib</run_depend>
  
  <export>
    <wire_core plugin="${prefix}/models_plugin.xml" />
  </export>


</package>


