<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wire_viz</name>
  <version>0.0.1</version>
  <description>
     Package that visualizes WIRE World Model input and output in RViz using visualization markers
  </description>
  <maintainer email="j.elfring@tue.nl">Jos Elfring</maintainer>
  <author>Sjoerd van den Dries, Jos Elfring</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wire_viz</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>problib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>wire_msgs</depend>

</package>
